<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/dark_gray"
        android:textSize="40sp"
        android:background="@color/white"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/line"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/space"
        android:textSize="50sp"
        android:gravity="end"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="15dp" />

    <TextView
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/zero"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:gravity="end"
        android:layout_marginEnd="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clean"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:text="@string/AC"
                android:textSize="40sp"
                android:textColor="@color/orange"
                android:gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginStart="10dp" />

            <ImageButton
                android:id="@+id/backspace"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="18dp"
                android:background="@drawable/backspace" />

            <Button
                android:id="@+id/percent_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:text="@string/percent"
                android:textSize="40sp"
                android:textColor="@color/orange"
                android:gravity="center"
                android:layout_marginStart="22dp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/divide"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:text="@string/divide"
                android:textSize="40sp"
                android:textColor="@color/orange"
                android:gravity="center"
                android:layout_marginStart="20dp"
                style="?android:attr/buttonBarButtonStyle" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:text="@string/seven"
                android:textSize="45sp"
                android:textColor="@color/black"
                android:gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginStart="22dp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:text="@string/eight"
                android:textSize="45sp"
                android:textColor="@color/black"
                android:gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginStart="28dp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:text="@string/nine"
                android:textSize="45sp"
                android:textColor="@color/black"
                android:gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginStart="28dp" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:text="@string/multiply"
                android:textSize="45sp"
                android:textColor="@color/orange"
                android:gravity="center"
                android:layout_margin="28dp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:text="@string/four"
                android:textSize="45sp"
                android:textColor="@color/black"
                android:gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginStart="22dp" />

            <Button
                android:id="@+id/five"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:text="@string/five"
                android:textSize="45sp"
                android:textColor="@color/black"
                android:gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginStart="28dp" />

            <Button
                android:id="@+id/six"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:text="@string/six"
                android:textSize="45sp"
                android:textColor="@color/black"
                android:gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginStart="28dp" />

            <Button
                android:id="@+id/subtract"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginLeft="32dp"
                android:gravity="center"
                android:text="@string/sub"
                android:textColor="@color/orange"
                android:textSize="45sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:text="@string/one"
                android:textSize="45sp"
                android:textColor="@color/black"
                android:gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginStart="22dp" />

            <Button
                android:id="@+id/two"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:text="@string/two"
                android:textSize="45sp"
                android:textColor="@color/black"
                android:gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginStart="28dp" />

            <Button
                android:id="@+id/three"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:text="@string/three"
                android:textSize="45sp"
                android:textColor="@color/black"
                android:gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginStart="28dp" />

            <Button
                android:id="@+id/add"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:text="@string/add"
                android:textSize="45sp"
                android:textColor="@color/orange"
                android:gravity="center"
                android:layout_margin="28dp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/space"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:textSize="45sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginStart="22dp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/zero"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:text="@string/zero"
                android:textSize="45sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginStart="22dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/point"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:text="@string/dot"
                android:textSize="45sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginStart="28dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/equal"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:text="@string/equal"
                android:textSize="45sp"
                android:textColor="@color/orange"
                android:gravity="center"
                android:layout_margin="28dp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>